# sprint-auditor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: language.md
.github/workflows/: ci.yml
docs/plans/: sprint-auditor.md
docs/specs/: sprint-auditor.md
docs/tech-specs/: sprint-auditor__T01.md  sprint-auditor__T02.md  sprint-auditor__T03.md  sprint-auditor__T04.md  sprint-auditor__T05.md  sprint-auditor__T06.md  sprint-auditor__T07.md  sprint-auditor__T08.md
src/sprint_auditor/: alert_engine.py  demo_pipeline.py  explain.py  ingestao.py  modelos.py  relatorio.py  score_engine.py  seed.py  template_fases.py
tests/: test_alert_engine.py  test_demo_pipeline.py  test_explain.py  test_ingestao.py  test_modelos.py  test_relatorio.py  test_score_engine.py  test_seed.py  test_template_fases.py
